--- a/src/Components/HomeComp/HomePentGrid/HomePentGrid.css
+++ b/src/Components/HomeComp/HomePentGrid/HomePentGrid.css
@@ -1,15 +1,14 @@
 .homePentGrid {
-    width: 88%;
-    margin-left: auto;
-    margin-right: auto;
     margin-bottom: 50px;
     margin-top: 50px;
 }
 
 .bentoGrid {
     width: 100%;
+    /* max-width: 960px; */
     /* height: 700px; */
     display: grid;
+    grid-auto-rows: minmax(100px, auto);
     grid-template-columns: repeat(4, 1fr);
     gap: 15px;
 }
@@ -17,7 +16,7 @@
 /* bentGrid1 */
 
 .bentGrid1 {
-    height: 300px;
+    /* height: 300px; */
     grid-column: 1/2;
     grid-row: 1/4;
     background-color: var(--cardColor);
@@ -34,14 +33,21 @@
 }
 
 .bentGrid1 p {
-    width: 76%;
+    /* width: 76%; */
     font-size: 16px;
     font-weight: 400;
     margin-bottom: 15px;
     line-height: 1.5;
 }
 
-.bentGrid1 img {
+.bentGridImg {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+
+}
+
+.bentGridImg img {
     height: 200px;
     position: absolute;
     right: 0px;
@@ -55,9 +61,13 @@
     grid-row: 1/3;
     background-color: var(--cardColor);
     border-radius: 10px;
-    height: 200px;
+    /* height: 200px; */
     text-align: start;
     padding: 30px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
 .bentGrid2 h1 {
@@ -70,7 +80,6 @@
 
     font-size: 16px;
     font-weight: 500;
-    margin-bottom: 30px;
 }
 
 .bentGrid2Icon {
@@ -80,7 +89,7 @@
 /* bentGrid3 */
 
 .bentGrid3 {
-    height: 300px;
+    /* height: 300px; */
     grid-column: 4/5;
     grid-row: 1/4;
     background-color: var(--cardColor);
@@ -97,18 +106,18 @@
 }
 
 .bentGrid3 p {
-    width: 76%;
+    /* width: 76%; */
     font-size: 16px;
     font-weight: 400;
     margin-bottom: 15px;
     line-height: 1.5;
 }
 
-.bentGrid3 img {
+.bentGridImg img {
     height: 200px;
-    position: absolute;
-    right: 0px;
-    bottom: 0px;
+    /* position: absolute;
+        right: 0px;
+        bottom: 0px; */
 }
 
 /* bentGrid4 */
@@ -118,9 +127,13 @@
     grid-row: 4/6;
     background-color: var(--cardColor);
     border-radius: 10px;
-    height: 200px;
+    /* height: 200px; */
     text-align: start;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
 
 }
 
@@ -134,8 +147,7 @@
 
     font-size: 16px;
     font-weight: 500;
-    margin-bottom: 10px;
-    line-height: 30px;
+    line-height: 20px;
 }
 
 /* bentGrid5 */
@@ -143,9 +155,9 @@
 .bentGrid5 {
     grid-column: 2/4;
     grid-row: 3/6;
-    background-color: var(--cardColor);
+    /* background-color: var(--cardColor); */
     border-radius: 10px;
-    height: 300px;
+    /* height: 300px; */
     padding: 20px;
 }
 
@@ -173,7 +185,7 @@
     text-align: start;
     /* padding: 30px 20px;
         padding-top: 0px; */
-    height: 410px;
+    /* height: 410px; */
     position: relative;
 }
 
@@ -185,7 +197,7 @@
 }
 
 .bentGrid6 p {
-    width: 76%;
+    /* width: 76%; */
     font-size: 16px;
     font-weight: 400;
     margin-bottom: 15px;
@@ -193,11 +205,11 @@
     padding: 0px 20px;
 }
 
-.bentGrid6 img {
+.bentGridImg img {
     height: 200px;
-    position: absolute;
-    right: 0px;
-    bottom: 0px;
+    /* position: absolute;
+        right: 0px;
+        bottom: 0px; */
 }
 
 .review {
@@ -281,9 +293,13 @@
     grid-row: 6/8;
     background-color: var(--cardColor);
     border-radius: 10px;
-    height: 200px;
+    /* height: 200px; */
     padding: 30px 20px;
     text-align: start;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
 .bentGrid7 h1 {
@@ -296,7 +312,7 @@
 
     font-size: 16px;
     font-weight: 500;
-    margin-bottom: 30px;
+
 }
 
 /* bentGrid8 */
@@ -306,9 +322,13 @@
     grid-row: 6/8;
     background-color: var(--cardColor);
     border-radius: 10px;
-    height: 200px;
+    /* height: 200px; */
     text-align: start;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
 .bentGrid8 h1 {
@@ -322,5 +342,5 @@
     font-size: 16px;
     font-weight: 500;
     margin-bottom: 10px;
-    line-height: 30px;
+    line-height: 20px;
 }
