--- a/src/Components/HomeComp/HomeSwiper/HomeSwiper.css
+++ b/src/Components/HomeComp/HomeSwiper/HomeSwiper.css
@@ -1,6 +1,6 @@
 .swiper {
-    width: 88%;
-    height: 600px;
+    /* height: 600px;
+        margin-top: 50px; */
 }
 
 .swiper-slide {
@@ -21,9 +21,8 @@
 }
 
 .homeSwiper {
-    width: 100%;
-    height: 100%;
     margin-top: 50px;
+    margin-bottom: 20px;
 }
 
 .homeSwiperHead {
