--- a/src/Components/HomeComp/Diseases/Diseases.css
+++ b/src/Components/HomeComp/Diseases/Diseases.css
@@ -39,7 +39,7 @@
 
 .diseaseTabInactive {
     padding: 15px 20px;
-    font-size: 25px;
+    font-size: 20px;
     font-family: var(--secondayFont);
     font-weight: 500;
     border-bottom: 2px solid rgb(210, 208, 208);
@@ -51,7 +51,7 @@
 
 .diseaseTabActive {
     padding: 15px 20px;
-    font-size: 25px;
+    font-size: 20px;
     font-family: var(--secondayFont);
     font-weight: 500;
     border-bottom: 2px solid var(--primaryColor);
@@ -114,3 +114,5 @@
 .diseaseContainerFlexRight p {
     line-height: 1.7;
 }
+
+@media only screen and (max-width: 600px) {}
