--- a/src/Components/HomeComp/HomeGrid/HomeGrid.css
+++ b/src/Components/HomeComp/HomeGrid/HomeGrid.css
@@ -194,3 +194,9 @@
     right: 0px;
     bottom: 0px;
 }
+
+@media only screen and (max-width: 600px) {
+    .gridOne {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
