--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -60,3 +60,29 @@
     /* background-color: transparent; */
     border: 1px solid var(--white);
 }
+
+@media only screen and (max-width: 600px) {
+    /* .navBar {
+            display: none;
+        } */
+
+    .navBarMob {
+        padding: 10px 0px;
+    }
+
+    .navBarMob img {
+        height: 50px;
+    }
+
+    .navBarMobBody {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .navMobLogo {
+        font-size: 25px;
+        font-weight: 900;
+    }
+}
