--- a/src/Components/HomeComp/HomeSwiper/HomeSwiper.css
+++ b/src/Components/HomeComp/HomeSwiper/HomeSwiper.css
@@ -60,3 +60,19 @@
     font-size: 50px;
     color: var(--white);
 }
+
+@media only screen and (max-width: 600px) {
+    .homeSwiper {
+        margin-top: 30px;
+    }
+
+    .swiper-slide img {
+        height: 200px !important;
+        border-radius: 15px;
+    }
+
+    .swiper-slide.swiper-slide-active {
+        height: 280px;
+        /* background-color: #ededed; */
+    }
+}
