--- a/src/Components/Reusable/Heading/Heading.css
+++ b/src/Components/Reusable/Heading/Heading.css
@@ -10,9 +10,9 @@
 
 .heading h1 {
     font-size: 50px;
-    font-family: var();
     font-family: var(--secondayFont);
     font-weight: 400;
+    text-align: start;
 }
 
 .heading p {
@@ -21,4 +21,21 @@
     text-align: left;
     margin-top: 15px;
     margin-bottom: 50px;
+}
+
+@media only screen and (max-width: 600px) {
+    .heading h1 {
+        font-size: 30px;
+        font-family: var(--tertiaryFont);
+    }
+
+    .heading p {
+        width: 100%;
+        margin-bottom: 20px;
+        font-family: var(--tertiaryFont);
+    }
+
+    .marginBottom0 {
+        margin-bottom: 0% !important;
+    }
 }
