--- a/src/Components/HomeComp/Diseases/Diseases.css
+++ b/src/Components/HomeComp/Diseases/Diseases.css
@@ -81,6 +81,7 @@
     color: var(--white);
     font-family: var(--primaryFont);
     background-color: var(--primaryColor);
+    cursor: pointer;
 }
 
 .diseaseContainerFlexLeftBody {
@@ -115,4 +116,108 @@
     line-height: 1.7;
 }
 
-@media only screen and (max-width: 600px) {}
+@media only screen and (max-width: 600px) {
+    .diseaseContainerHead {
+        padding: 0px;
+        width: 100%;
+    }
+
+    .diseaseContainerHead h1 {
+        font-size: 30px;
+    }
+
+    .diseaseContainerHead p {
+        font-size: 16px;
+        font-weight: 400;
+        font-family: var(--tertiaryFont);
+    }
+
+    .diseaseContainerFlexRight {
+        display: none;
+    }
+
+    .diseaseContainerFlexLeft {
+        width: 100%;
+        padding: 0px;
+    }
+
+    .diseaseTabActive {
+        font-size: 14px;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    .diseaseTabInactive {
+        font-size: 14px;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    .diseaseContainerFlex {
+        margin-top: 20px;
+    }
+
+    #overlay {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 2;
+        cursor: pointer;
+    }
+
+    .diseaseOverlay {
+        position: fixed;
+        width: 85%;
+        border-radius: 20px;
+        height: 50%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        transform: translate(9%, 50%);
+        background-color: var(--white);
+        z-index: 5;
+        cursor: pointer;
+        padding: 10px 15px;
+    }
+
+    .diseaseOverlayHead {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        position: relative;
+    }
+
+    .diseaseOverlayBody {
+        width: 100%;
+        height: 270px;
+        overflow-y: scroll;
+    }
+
+    .diseaseOverlayHead h1 {
+        font-size: 20px;
+        font-weight: 500;
+        font-style: var(--tertiaryFont);
+        margin-bottom: 15px;
+    }
+
+    .diseaseOverlay p {
+        font-size: 14px;
+        font-family: var(--tertiaryFont);
+        text-align: start;
+        line-height: 1.5;
+        opacity: 0.7;
+    }
+
+    .close {
+        font-size: 27px;
+        position: absolute;
+        top: 0%;
+        right: -2%;
+    }
+}
