--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -95,3 +95,55 @@
     font-size: 16px;
     font-weight: 400;
 }
+
+@media only screen and (max-width: 600px) {
+    .innerFooter {
+        flex-direction: column;
+    }
+
+    .foot1 {
+        width: 100%;
+    }
+
+    .foot2 {
+        width: 100%;
+    }
+
+    .foot3 {
+        width: 100%;
+    }
+
+    .foot4 {
+        width: 50%;
+        height: 40px;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 15px;
+    }
+
+    .footer {
+        width: 100%;
+        height: 100%;
+        line-height: 2;
+        margin-top: 30px;
+    }
+
+    .foot1 h1 {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .foot3 h1 {
+        margin-top: 25px;
+        margin-bottom: 10px;
+    }
+
+    .foot2 h1 {
+        margin-top: 25px;
+        margin-bottom: 10px;
+    }
+
+    .footer h3 {
+        margin-bottom: 15px;
+    }
+}
