--- a/src/Components/HomeComp/Diseases/Diseases.css
+++ b/src/Components/HomeComp/Diseases/Diseases.css
@@ -177,16 +177,14 @@
         position: fixed;
         width: 85%;
         border-radius: 20px;
-        height: 50%;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        transform: translate(9%, 50%);
+        /* height: 50%; */
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         background-color: var(--white);
         z-index: 10;
         cursor: pointer;
-        padding: 10px 15px;
+        padding: 15px 15px;
     }
 
     .diseaseOverlayHead {
