--- a/src/Components/HomeComp/Diseases/Diseases.css
+++ b/src/Components/HomeComp/Diseases/Diseases.css
@@ -16,7 +16,7 @@
     margin-bottom: 15px;
 }
 
-.diseaseContainerHead p {}
+/* .diseaseContainerHead p {} */
 
 .diseaseContainerFlex {
     width: 100%;
