--- a/src/Components/HomeComp/Diseases/Diseases.css
+++ b/src/Components/HomeComp/Diseases/Diseases.css
@@ -52,7 +52,7 @@
 }
 
 .diseaseTabActive {
-    padding: 15px 20px;
+    padding: 15px;
     font-size: 20px;
     font-family: var(--secondayFont);
     font-weight: 500;
